kitten/reported_bugs/c/c-50892/stderr.txt
mutant.c:1:1: warning: declaration does not declare anything [-Wmissing-declarations]

int ;

^~~

mutant.c:2:18: warning: no previous extern declaration for non-static variable 'p' [-Wmissing-variable-declarations]

struct a * const p = ( struct a * ) 0x4A004100 ;

                 ^

mutant.c:2:1: note: declare 'static' if the variable is not intended to be used outside of this translation unit

struct a * const p = ( struct a * ) 0x4A004100 ;

^

mutant.c:7:5: error: incomplete definition of type 'struct a'

& p -> a ,

  ~ ^

mutant.c:2:8: note: forward declaration of 'struct a'

struct a * const p = ( struct a * ) 0x4A004100 ;

       ^

mutant.c:8:5: error: incomplete definition of type 'struct a'

& p -> b ,

  ~ ^

mutant.c:2:8: note: forward declaration of 'struct a'

struct a * const p = ( struct a * ) 0x4A004100 ;

       ^

clang-trunk: /tmp/tmp.B1HwadcXIH-clang-builder/llvm-project/clang/lib/Sema/SemaCast.cpp:2833: void {anonymous}::CastOperation::CheckCStyleCast(): Assertion `(DestType->containsErrors() || SrcExpr.get()->containsErrors() || SrcExpr.get()->containsErrors()) && "should only occur in error-recovery path."' failed.

PLEASE submit a bug report to https://bugs.llvm.org/ and include the crash backtrace, preprocessed source, and associated run script.

Stack dump:

0.	Program arguments: clang-trunk -O3 -g3 -c -Wall -Wextra -Weverything mutant.c

1.	mutant.c:12:1: current parser token '='

2.	mutant.c:4:1: parsing function body 'foo'

3.	mutant.c:4:1: in compound statement ('{}')

Stack dump without symbol names (ensure you have llvm-symbolizer in your PATH or set the environment var `LLVM_SYMBOLIZER_PATH` to point to it):

clang-trunk(+0x39591f4)[0x55addf38e1f4]

clang-trunk(_ZN4llvm3sys15CleanupOnSignalEm+0xe4)[0x55addf38c014]

clang-trunk(+0x389de48)[0x55addf2d2e48]

/lib/x86_64-linux-gnu/libpthread.so.0(+0x153c0)[0x7fe4524ac3c0]

/lib/x86_64-linux-gnu/libc.so.6(gsignal+0xcb)[0x7fe451f4b18b]

/lib/x86_64-linux-gnu/libc.so.6(abort+0x12b)[0x7fe451f2a859]

/lib/x86_64-linux-gnu/libc.so.6(+0x25729)[0x7fe451f2a729]

/lib/x86_64-linux-gnu/libc.so.6(+0x36f36)[0x7fe451f3bf36]

clang-trunk(+0x5ce40a1)[0x55ade17190a1]

clang-trunk(_ZN5clang4Sema19BuildCStyleCastExprENS_14SourceLocationEPNS_14TypeSourceInfoES1_PNS_4ExprE+0x26d)[0x55ade171aa1d]

clang-trunk(_ZN5clang4Sema13ActOnCastExprEPNS_5ScopeENS_14SourceLocationERNS_10DeclaratorERNS_9OpaquePtrINS_8QualTypeEEES3_PNS_4ExprE+0x391)[0x55ade1a49c31]

clang-trunk(_ZN5clang6Parser20ParseParenExpressionERNS0_16ParenParseOptionEbbRNS_9OpaquePtrINS_8QualTypeEEERNS_14SourceLocationE+0x141f)[0x55ade16093cf]

clang-trunk(_ZN5clang6Parser19ParseCastExpressionENS0_13CastParseKindEbRbNS0_13TypeCastStateEbPb+0xd30)[0x55ade15ff4d0]

clang-trunk(_ZN5clang6Parser19ParseCastExpressionENS0_13CastParseKindEbNS0_13TypeCastStateEbPb+0x3b)[0x55ade16013cb]

clang-trunk(_ZN5clang6Parser19ParseCastExpressionENS0_13CastParseKindEbRbNS0_13TypeCastStateEbPb+0x296)[0x55ade15fea36]

clang-trunk(_ZN5clang6Parser19ParseCastExpressionENS0_13CastParseKindEbNS0_13TypeCastStateEbPb+0x3b)[0x55ade16013cb]

clang-trunk(_ZN5clang6Parser25ParseAssignmentExpressionENS0_13TypeCastStateE+0x3d)[0x55ade160146d]

clang-trunk(_ZN5clang6Parser15ParseExpressionENS0_13TypeCastStateE+0xd)[0x55ade16049cd]

clang-trunk(_ZN5clang6Parser20ParseParenExpressionERNS0_16ParenParseOptionEbbRNS_9OpaquePtrINS_8QualTypeEEERNS_14SourceLocationE+0x54d)[0x55ade16084fd]

clang-trunk(_ZN5clang6Parser19ParseCastExpressionENS0_13CastParseKindEbRbNS0_13TypeCastStateEbPb+0xd30)[0x55ade15ff4d0]

clang-trunk(_ZN5clang6Parser19ParseCastExpressionENS0_13CastParseKindEbNS0_13TypeCastStateEbPb+0x3b)[0x55ade16013cb]

clang-trunk(_ZN5clang6Parser25ParseAssignmentExpressionENS0_13TypeCastStateE+0x3d)[0x55ade160146d]

clang-trunk(_ZN5clang6Parser15ParseExpressionENS0_13TypeCastStateE+0xd)[0x55ade16049cd]

clang-trunk(_ZN5clang6Parser18ParseExprStatementENS0_17ParsedStmtContextE+0x4e)[0x55ade166c60e]

clang-trunk(_ZN5clang6Parser42ParseStatementOrDeclarationAfterAttributesERN4llvm11SmallVectorIPNS_4StmtELj32EEENS0_17ParsedStmtContextEPNS_14SourceLocationERNS_25ParsedAttributesWithRangeE+0x8f2)[0x55ade1663ba2]

clang-trunk(_ZN5clang6Parser27ParseStatementOrDeclarationERN4llvm11SmallVectorIPNS_4StmtELj32EEENS0_17ParsedStmtContextEPNS_14SourceLocationE+0x9a)[0x55ade166458a]

clang-trunk(_ZN5clang6Parser26ParseCompoundStatementBodyEb+0x5f9)[0x55ade1665509]

clang-trunk(_ZN5clang6Parser26ParseFunctionStatementBodyEPNS_4DeclERNS0_10ParseScopeE+0xda)[0x55ade1667b1a]

clang-trunk(_ZN5clang6Parser23ParseFunctionDefinitionERNS_17ParsingDeclaratorERKNS0_18ParsedTemplateInfoEPNS0_18LateParsedAttrListE+0x682)[0x55ade15addb2]

clang-trunk(_ZN5clang6Parser14ParseDeclGroupERNS_15ParsingDeclSpecENS_17DeclaratorContextEPNS_14SourceLocationEPNS0_12ForRangeInitE+0x740)[0x55ade15da710]

clang-trunk(_ZN5clang6Parser30ParseDeclOrFunctionDefInternalERNS_25ParsedAttributesWithRangeERNS_15ParsingDeclSpecENS_15AccessSpecifierE+0x226)[0x55ade15a85b6]

clang-trunk(+0x5b73ba1)[0x55ade15a8ba1]

clang-trunk(_ZN5clang6Parser24ParseExternalDeclarationERNS_25ParsedAttributesWithRangeEPNS_15ParsingDeclSpecE+0x217)[0x55ade15af3a7]

clang-trunk(_ZN5clang6Parser17ParseTopLevelDeclERNS_9OpaquePtrINS_12DeclGroupRefEEEb+0x1ce)[0x55ade15b093e]

clang-trunk(_ZN5clang8ParseASTERNS_4SemaEbb+0x219)[0x55ade15a3189]

clang-trunk(_ZN5clang13CodeGenAction13ExecuteActionEv+0x178)[0x55ade04ea458]

clang-trunk(_ZN5clang14FrontendAction7ExecuteEv+0xd9)[0x55addfd999e9]

clang-trunk(_ZN5clang16CompilerInstance13ExecuteActionERNS_14FrontendActionE+0x146)[0x55addfd2cc36]

clang-trunk(_ZN5clang25ExecuteCompilerInvocationEPNS_16CompilerInstanceE+0x930)[0x55addfe77870]

clang-trunk(_Z8cc1_mainN4llvm8ArrayRefIPKcEES2_Pv+0x7f6)[0x55addcc97696]

clang-trunk(+0x125e9d8)[0x55addcc939d8]

clang-trunk(+0x4188bb9)[0x55addfbbdbb9]

clang-trunk(_ZN4llvm20CrashRecoveryContext9RunSafelyENS_12function_refIFvvEEE+0xbc)[0x55addf2d2fcc]

clang-trunk(+0x418935d)[0x55addfbbe35d]

clang-trunk(_ZNK5clang6driver11Compilation14ExecuteCommandERKNS0_7CommandERPS3_+0x9b)[0x55addfb90aeb]

clang-trunk(_ZNK5clang6driver11Compilation11ExecuteJobsERKNS0_7JobListERN4llvm15SmallVectorImplISt4pairIiPKNS0_7CommandEEEE+0x119)[0x55addfb91609]

clang-trunk(_ZN5clang6driver6Driver18ExecuteCompilationERNS0_11CompilationERN4llvm15SmallVectorImplISt4pairIiPKNS0_7CommandEEEE+0x99)[0x55addfb9c1b9]

clang-trunk(main+0x18af)[0x55addcbc252f]

/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf3)[0x7fe451f2c0b3]

clang-trunk(_start+0x2e)[0x55addcc9354e]

clang-13: error: clang frontend command failed with exit code 134 (use -v to see invocation)

clang version 13.0.0 (https://github.com/llvm/llvm-project.git ef906573a127cffef7cae75d5155c15a8a2a3a5e)

Target: x86_64-unknown-linux-gnu

Thread model: posix

InstalledDir: /home/cnsun/usr/bin

clang-13: note: diagnostic msg: 

********************



PLEASE ATTACH THE FOLLOWING FILES TO THE BUG REPORT:

Preprocessed source(s) and associated run script(s) are located at:

clang-13: note: diagnostic msg: /tmp/mutant-a4331d.c

clang-13: note: diagnostic msg: /tmp/mutant-a4331d.sh

clang-13: note: diagnostic msg: 



********************

